5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4432/executions/1613_1803.log
== SUBMITION (2019-04-04 18:10:00) 
-- CODE:
x=int(input("digite quatro digios:   "))
x=//10
c=x%10
q=y%10
p=y%100h=p//10
t=y//100
c=c*2
q=q*3
h=h*4
t=t*5
r=(c+q+h+t)%11
print(r)


-- EXECUTION TIME:
0.189578
-- ERROR:
  File "/home/codebench/codes/1613/1803/main.py", line 2
    x=//10
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:10:04) 
-- CODE:
x=int(input("digite quatro digios:   "))
x=//10
c=x%10
q=y%10
p=y%100h=p//10
t=y//100
c=c*2
q=q*3
h=h*4
t=t*5
r=(c+q+h+t)%11
print(r)


-- EXECUTION TIME:
0.159061
-- ERROR:
  File "/home/codebench/codes/1613/1803/main.py", line 2
    x=//10
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:10:29) 
-- CODE:
x=int(input("digite quatro digios:   "))
y=x//10
c=x%10
q=y%10
p=y%100h=p//10
t=y//100
c=c*2
q=q*3
h=h*4
t=t*5
r=(c+q+h+t)%11
print(r)


-- EXECUTION TIME:
0.136477
-- ERROR:
  File "/home/codebench/codes/1613/1803/main.py", line 5
    p=y%100h=p//10
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:10:31) 
-- CODE:
x=int(input("digite quatro digios:   "))
y=x//10
c=x%10
q=y%10
p=y%100h=p//10
t=y//100
c=c*2
q=q*3
h=h*4
t=t*5
r=(c+q+h+t)%11
print(r)


-- EXECUTION TIME:
0.136596
-- ERROR:
  File "/home/codebench/codes/1613/1803/main.py", line 5
    p=y%100h=p//10
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:11:06) 
-- CODE:
x=int(input("digite quatro digios:   "))
y=x//10
c=x%10
q=y%10
p=y%100
h=p//10
t=y//100
c=c*2
q=q*3
h=h*4
t=t*5
r=(c+q+h+t)%11
print(r)


-- EXECUTION TIME:
0.181087
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
10
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
6
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:22:28) 
-- CODE:
x=int(input("digite quatro digios:   "))
y=x//10
c=x%10
q=y%10
p=y%100
h=p//10
t=y//100
c=c*2
q=q*3
h=h*4
t=t*5
r=(c+q+h+t)%11
print(r)


-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:22:29) 
-- CODE:
x=int(input("digite quatro digios:   "))
y=x//10
c=x%10
q=y%10
p=y%100
h=p//10
t=y//100
c=c*2
q=q*3
h=h*4
t=t*5
r=(c+q+h+t)%11
print(r)


-- EXECUTION TIME:
0.156124
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
10
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
6
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
